# renderdoc-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: triangle.rs
renderdoc-derive/: Cargo.toml
renderdoc-derive/src/: lib.rs
renderdoc-sys/: Cargo.toml  README.md  generate.sh  generate_bindings.sh
renderdoc-sys/src/: app.rs  bindings.rs  lib.rs
renderdoc_sys/: .gdb_history  Cargo.toml  build.rs  triangle.rdc
renderdoc_sys/replay/: wrapper.h
renderdoc_sys/replay-new/: wrapper.h
renderdoc_sys/replay-new/include/: camera.h  float_vector.h
renderdoc_sys/replay/include/: CaptureFile.h  Core.h  Extern.h  RemoteServer.h  ReplayController.h  TargetControl.h  api.h  camera.h  capture_file.h  core.h  remote_server.h  replay_controller.h  replay_output.h  target_control.h
renderdoc_sys/replay/src/: Api.cpp  Camera.cpp  CaptureFile.cpp  RemoteServer.cpp  ReplayController.cpp  ReplayOutput.cpp  TargetControl.cpp  api.cpp  camera.cpp  capture_file.cpp  remote_server.cpp  replay_controller.cpp  replay_output.cpp  target_control.cpp
renderdoc_sys/src/: app.rs  lib.rs  replay.rs
renderdoc_sys/src/replay/: wrapper.h
renderdoc_sys/src/replay/include/: api.h  camera.h  target_control.h
renderdoc_sys/src/replay/src/: camera.cpp  remote_server.cpp  replay_controller.cpp  target_control.cpp
renderdoc_sys/tests/: camera.rs  capture_file.rs
src/: api.rs  capture_opts.rs  captures.rs  entry.rs  error.rs  handles.rs  input_button.rs  lib.rs  loader.rs  overlay_bits.rs  prelude.rs  renderdoc.rs  settings.rs  version.rs
src/app/: api.rs  ffi.rs  mod.rs  prelude.rs  types.rs  version.rs
src/app/entry/: mod.rs  version.rs
src/entry/: mod.rs  version.rs
src/replay/: mod.rs
