[package]
name = "renderdoc"
version = "0.8.1"
edition = "2018"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "RenderDoc application bindings for Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/renderdoc-rs"
repository = "https://github.com/ebkalderon/renderdoc-rs"
documentation = "https://docs.rs/renderdoc/"
readme = "README.md"
categories = ["rendering"]
keywords = ["graphics", "profile", "renderdoc", "trace"]

[badges]
circle-ci = { repository = "ebkalderon/renderdoc-rs" }

[dependencies]
bitflags = "1.0"
float-cmp = "0.8"
libloading = "0.6"
once_cell = "1.0"
renderdoc-sys = { version = "0.7", path = "./renderdoc-sys" }

glutin = { version = "0.24", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["d3d12","d3d11"] }
wio = "0.2"

[dev-dependencies]
gfx = "0.18.1"
gfx_window_glutin = "0.31"
glutin-021 = { version = "0.21", package = "glutin" }

[workspace]
members = [".", "renderdoc-sys"]
default-members = [".", "renderdoc-sys"]
