[package]
name = "renderdoc"
version = "0.11.0"
edition = "2018"
resolver = "2"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "RenderDoc application bindings for Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/renderdoc-rs"
repository = "https://github.com/ebkalderon/renderdoc-rs"
documentation = "https://docs.rs/renderdoc/"
readme = "README.md"
keywords = ["graphics", "profiling", "renderdoc", "tracing"]
categories = ["development-tools::debugging", "rendering"]

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []

# Private feature only intended for doctests in CI
ci = []

[dependencies]
bitflags = "2.0"
float-cmp = "0.9"
libloading = "0.8"
once_cell = "1.0"
renderdoc-sys = { version = "1.0.0", path = "./renderdoc-sys" }

glutin = { version = "0.30", optional = true }
winit = { version = "0.28", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["d3d12","d3d11"] }
wio = "0.2"

[dev-dependencies]
pollster = "0.3"
wgpu = "0.19"
wgpu-subscriber = "0.1.0"
winit = "0.28"

[workspace]
members = [".", "renderdoc-sys"]
