[package]
name = "renderdoc-derive"
version = "0.5.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Internal custom derive macro intended for renderdoc-rs"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/renderdoc-rs"
repository = "https://github.com/ebkalderon/renderdoc-rs"
documentation = "https://docs.rs/renderdoc-derive/"
categories = ["development-tools::build-utils"]
keywords = ["derive", "renderdoc"]

[badges]
circle-ci = { repository = "ebkalderon/renderdoc-rs" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.30"
quote = "0.6.12"
syn = "0.15.34"
