[package]
name = "renderdoc-derive"
version = "0.6.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Internal custom derive macro intended for renderdoc-rs"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/renderdoc-rs/tree/master/renderdoc-derive"
repository = "https://github.com/ebkalderon/renderdoc-rs"
documentation = "https://docs.rs/renderdoc-derive/"
categories = ["development-tools::build-utils"]
keywords = ["derive", "renderdoc"]

[badges]
circle-ci = { repository = "ebkalderon/renderdoc-rs" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
quote = "1.0.0"
syn = "1.0.1"
