[package]
name = "renderdoc-sys"
version = "0.4.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Raw FFI bindings to the RenderDoc API"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/renderdoc-rs"
repository = "https://github.com/ebkalderon/renderdoc-rs"
documentation = "https://docs.rs/renderdoc-sys/"
keywords = ["ffi", "renderdoc"]

[badges]
circle-ci = { repository = "ebkalderon/renderdoc-rs" }

[dependencies]
