[package]
name = "renderdoc-sys"
version = "1.0.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Raw FFI bindings to the RenderDoc API"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ebkalderon/renderdoc-rs/tree/master/renderdoc-sys"
repository = "https://github.com/ebkalderon/renderdoc-rs"
documentation = "https://docs.rs/renderdoc-sys/"
readme = "README.md"
keywords = ["ffi", "renderdoc"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
