[package]
name = "renderdoc_sys"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Raw FFI bindings to the RenderDoc API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ebkalderon/renderdoc-rs"
documentation = "https://docs.rs/renderdoc_sys/"
links = "renderdoc"
build = "build.rs"

[features]
default = ["app", "replay"]
app = []
replay = []

[target.'cfg(windows)'.dependencies]
winapi = "~0.2.8"
wio = "~0.1.2"

[dev-dependencies]
assert_approx_eq = "~1"

[build-dependencies]
bindgen = "~0.32"
cc = "~1"
